Update readme and composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ceca/tpv",
+    "name": "josevavia/tpv-ceca",
     "keywords": ["tpv", "ceca"],
     "description": "Package to connect with CECA TPV",
     "license": "MIT",
